--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,38 @@ target-version = ['py39']
 include = '\.pyi?$'
 
 [build-system]
-requires = [
-    "setuptools >= 35.0.2",
-    "setuptools_scm >= 2.0.0, <3"
-]
+requires = ["setuptools>=40.8.0"]
 build-backend = "setuptools.build_meta"
+
+[project]
+name="pemi"
+classifiers=[
+    "Intended Audience :: Science/Research",
+    "Programming Language :: Python :: 3",
+    "Topic :: Scientific/Engineering",
+    "Operating System :: OS Independent"
+]
+description=""
+dependencies = [
+    "pydrs>=1.2.4",
+    "qtawesome==1.1.1"
+]
+readme="README.md"
+license = {text = "GPL v3 License"}
+requires-python=">=3.6"
+dynamic=["version"]
+
+[tool.setuptools]
+zip-safe=false
+include-package-data=true
+
+[tool.setuptools.package-data]
+"*"=["*.ui", "*.png"]
+
+[tool.setuptools.dynamic]
+version = {attr = "pemi.__version__"}
+
+[project.optional-dependencies]
+dev = [
+    "pytest==7.1.2"
+]
